--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "test:cypress": "start-server-and-test start http://localhost: cypress",
+    "cypress": "cypress open",
     "start": "node server.js"
   },
   "dependencies": {
@@ -21,11 +23,14 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
+    "cypress": "^8.7.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
     "sass": "^1.19.0",
     "sass-loader": "^9.0.2",
+    "start-server-and-test": "^1.14.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
@@ -37,6 +42,7 @@
     },
     "extends": [
       "plugin:vue/essential",
+      "plugin:cypress/recommended",
       "eslint:recommended"
     ],
     "parserOptions": {
